--- a/views/index.erb
+++ b/views/index.erb
@@ -9,8 +9,12 @@
 	</label>
 
 	<label for="player_2_name">
+	Player 2 name
 	<input type="text" name="player_2_name">
 	</label>
+	
 	<input type="submit" value="Submit">
 
 </form>
+
+
