2 players reduced to 1 - player 2 commented out

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,7 @@
-<%= @player_1_name %> vs <%= @player_2_name %>
+<%= @markateer_name %>
+<%= @markateer_name %>: Paper
+
+<!-- <%= @player_1_name %> vs <%= @player_2_name %>
+
 <%= @player_1_name %>: Paper
-<%= @player_2_name %>: Rock
+<%= @player_2_name %>: Rock -->
