--- a/views/index.erb
+++ b/views/index.erb
@@ -3,15 +3,15 @@
 
 <form method="post" action="/names">
 
-	<label for="player_1_name">
-	Player 1 name
-	<input type="text" name="player_1_name">
+	<label for="markateer_name">
+	Markateer name
+	<input type="text" name="markateer_name">
 	</label>
-
+<!-- 
 	<label for="player_2_name">
 	Player 2 name
 	<input type="text" name="player_2_name">
-	</label>
+	</label> -->
 	
 	<input type="submit" value="Submit">
 
